# tuya-chip

./: .gitmodules  CMakeLists.txt  test-websocket.cmake  tuya-client.cmake
src/: custom_rng.c  custom_rng.h  main.c  test_websocket.c  transport_tcp.c  transport_tcp.h
